Fix tagline wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ main {
 
 #name_tagline {
     display: inline-block;
-    width: 68%;
+    width: 67%;
 }
 
 #name {
